# webprefs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  webprefs.db
migrations/2026-04-17-131635-0000_create_users/: up.sql
migrations/2026-04-17-131639-0000_create_token_blacklist/: down.sql  up.sql
migrations/2026-04-17-145938-0000_prefs/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  store.rs
src/api/: auth.rs  mod.rs  prefs.rs  user.rs
src/models/: mod.rs  prefs.rs
src/models/db/: mod.rs  prefs.rs  user.rs
web-client/: .editorconfig  README.md  angular.json  package-lock.json  package.json
web-client/src/: index.html
web-client/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts  auth.interceptor.ts
web-client/src/app/guards/: auth.guard.ts
web-client/src/app/logout-button/: logout-button.html  logout-button.ts
web-client/src/app/models/: http-responses.ts  pref-entry.interface.ts
web-client/src/app/pages/home/: home.css  home.html  home.ts
web-client/src/app/pages/home/prefs/: prefs.css  prefs.html  prefs.ts
web-client/src/app/pages/home/scopes/: scopes.css  scopes.html  scopes.ts
web-client/src/app/pages/login-page/: login-page.css  login-page.html  login-page.ts
web-client/src/app/pages/login-page/login/: login.html  login.ts
web-client/src/app/pages/login-page/signup/: signup.css  signup.html  signup.ts
web-client/src/app/services/: auth.service.ts  prefs.service.ts
web-client/src/environments/: environment.development.ts  environment.ts
