[package]
name = "web-auth-template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-rt = "2.11.0"
actix-web = "4.13.0"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.7", features = ["sqlite", "uuid", "chrono", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
log = "0.4.29"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
